# r-type

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Makefile  README.md  cmake_install.cmake  doc  doxy  linux.sh  package.ps1  package.sh  windows.bat
.cmake/api/v1/reply/: cache-v2-8ba6e6ed949bf7be6c98.json  cmakeFiles-v1-f13daa9b44969b511566.json  codemodel-v2-781ab5e23ba6060c5122.json  directory-SFML-4716b316d20e76f66cde.json  directory-SFML.src.SFML.Audio-ab0f98fae9df4a583f68.json  directory-SFML.src.SFML.Graphics-b02ccb6e003db89e9de9.json  directory-SFML.src.SFML.Network-63d23ec24ffa1f53bf47.json  directory-SFML.src.SFML.System-52815b353121bd8e7721.json  directory-SFML.src.SFML.Window-ec875301628a4fb2bd86.json  index-2023-10-23T07-51-01-0813.json  target-rtype-client-0a921ca5a7cca9080752.json  target-rtype-server-ed1110223b0cdc6da525.json  target-sfml-audio-71c18b3a08ecc6cc6ab2.json  target-sfml-graphics-64a5f76e52cd8ba793ca.json  target-sfml-network-3c6db5e63420533cb0cc.json  target-sfml-system-2767b1ba8a6dc6ca6281.json  target-sfml-window-fba78c830d08d9b917c1.json
.github/workflows/: compilation.yaml
Google_tests/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Google_tests/lib/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Google_tests/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ecs/: AnimationComponent.cpp  AnimationComponent.h  Component.h  ControllerMouvement.cpp  ControllerMouvement.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameInstance.h  Image.h  Level.h  LevelManager.h  Menu.cpp  Menu.h  Player.cpp  Player.h  PlayerClass.h  TextButton.h  TextureManager.h  Utils.h  rpg2.cpp  rpg2.h
src/: SFML.hpp  macro.hpp  main.cpp
src/Compenent/Base/: Component.hpp
src/Compenent/Drawable/: Drawable.cpp  Drawable.hpp
src/Componant/: HpComponant.hpp
src/Componant/base/: Componant.hpp  ComponantList.hpp
src/Component/: AnimationComponent.hpp  ColliderComponent.hpp  CollisionComponent.hpp  Component.cpp  Component.hpp  ComponentBase.hpp  DamageComponent.hpp  DrawableComponent.hpp  EnemyPath.hpp  HealthComponent.hpp  HitboxComponent.hpp  HpComponent.hpp  InputComponent.hpp  LifeSpan.hpp  OnDie.hpp  PatternComponent.hpp  PlayerComponent.hpp  PlayerInputComponent.hpp  PositionComponent.hpp  PvComponent.hpp  ShootComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp  WeaponComponent.hpp  dataComponent.hpp
src/Component/base/: Component.hpp  ComponentList.hpp
src/Component/enum/: ShootType.hpp
src/Component/tag/: BackgroundTag.hpp  EnemyTag.hpp  LevelTag.hpp
src/Entity/: Entity.cpp  Entity.hpp  Player.hpp
src/Entity/Base/: Entity.cpp  Entity.hpp
src/Entity/Player/: Player.cpp  Player.hpp
src/Entity/base/: Entity.hpp  EntityList.hpp
src/Game/: DevLevel.cpp  DevLevel.hpp  FirstLevel.cpp  FirstLevel.hpp  WinLevel.cpp
src/Game/Lobby/: LobbyLevel.cpp  LobbyLevel.hpp
src/Game/dead/: DeadLevel.cpp  DeadLevel.hpp
src/Game/win/: WinLevel.cpp  WinLevel.hpp
src/GameEngine/: GameEngine.cpp  GameEngine.hpp
src/GameInstance/: GameInstance.hpp
src/Level/: Level.hpp  LevelManager.hpp
src/Level/Base/: Level.hpp  LevelManager.hpp
src/Level/Menu/: Menu.cpp  Menu.hpp
src/NetClient/: Client.cpp  Client.hpp
src/NetServer/: Server.cpp  Server.hpp
src/System/: AnimationSystem.hpp  CollisionSystem.hpp  DrawableSystem.cpp  DrawableSystem.hpp  HpSystem.hpp  InputSystem.cpp  InputSystem.hpp  LifeSpan.hpp  PathSystem.hpp  PatternSystem.cpp  PatternSystem.hpp  PlayerInputSystem.cpp  PlayerInputSystem.hpp  System.hpp  SystemList.hpp  TestSystem.cpp  TestSystem.hpp  TextSystem.hpp  TransformSystem.cpp  TransformSystem.hpp  VelocitySystem.hpp
src/TextureManager/: TextureManager.cpp  TextureManager.hpp
src/Utils/: Utils.hpp
src/Window/: Window.cpp  Window.hpp
src/World/: World.cpp  World.hpp
